--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,101 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
+body{
+  background-color: #1E1E1E;
+  /*font: 500 16px/28px */
+  font-family:'Kdam Thmor Pro',Arial, Helvetica, sans-serif;
+}
 html {
-  color: #222;
+  color: #E6E6E6;
   font-size: 1em;
   line-height: 1.4;
 }
+.top-bar a{
+  color: inherit;
+  text-decoration: none;
+  transition: .4s;
+  font-size: 24px;
+  font-weight: 500;
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
+}
+.top-bar {
+  background-color: #E519AC;
+  justify-content: space-between;
+  padding-right:  40px;
+  padding-left:  20px;
+  display: flex;
+  align-items: center;
+
+}
+.top-bar a:hover{
+  color: #410CB3;
+}
+.top-bar img {
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+}
+.navbar {
+  padding-right: 80px;
+
+}
+.material-symbols-outlined:hover div {
+  display: block;
+}
+
+.dropdown-menu a {
+  display: block;
+  color: #f9f9f9;
+  padding: 12px 16px;
+  text-decoration: none;
+}
+.navbar ul {
+  list-style: none;
+  margin-left: 100px;
+  padding: 0;
+  display: flex;
+}
+
+.navbar ul li {
+  margin-right: 20px;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: #f9f9f9
+}
+
+.material-symbols-outlined{
+  background-color: #1E1E1E;
+  color: #f9f9f9;
+}
+
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #1E1E1E;
+  min-width: 160px;
+  /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.6);*/
+  z-index: 1;
+}
+.dropdown-menu a {
+  color: #f9f9f9;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ::-moz-selection {
   background: #b3d4fc;
