--- a/css/main.css
+++ b/css/main.css
@@ -1,86 +1,165 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Playfair+Display&display=swap');
 body{
   background-color: #1E1E1E;
   /*font: 500 16px/28px */
-  font-family:'Kdam Thmor Pro',Arial, Helvetica, sans-serif;
+  /*font-family:'Kdam Thmor Pro', sans-serif;*/
+  /*font-family: Circle, sans-serif;*/
+  font-family: cursive ,Comic Sans MS;
 }
 html {
   color: #E6E6E6;
   font-size: 1em;
   line-height: 1.4;
 }
-.top-bar a{
+
+a{
   color: inherit;
   text-decoration: none;
-  transition: .4s;
-  font-size: 24px;
-  font-weight: 500;
-
+  transition: .4s; /*для плавної зміни кольори при hover*/
 }
-.top-bar {
+ol, li,
+ul, li{
+  list-style-type: none;
+}
+img{
+  max-height: 100%;
+  max-width: 100%;
+}
+.conteiner{
+  max-width: 90%;
+  margin: 0 auto;
+  padding: 0 75px ;
+}
+.conteiner-header{
+  padding: 0 10px;
+}
+
+
+
+/*HEADER*/
+
+
+
+#header-section{
+  padding: 15px 0;
   background-color: #E519AC;
+}
+.navbar img {
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    transition: transform 0.3s ease-in-out;
+}
+.navbar img:hover{
+    transform: scale(1.3);
+}
+.header, .navbar, .nav-main{
+  display: flex;
   justify-content: space-between;
-  padding-right:  40px;
-  padding-left:  20px;
-  display: flex;
   align-items: center;
-
 }
-.top-bar a:hover{
+.navbar{
+  flex-grow: 1;
+}
+.nav-main{
+  font: 400 24px cursive ,Comic Sans MS;
+  gap: 48px;
+}
+.header a:hover{
   color: #410CB3;
+  font-weight: 700;
 }
-.top-bar img {
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
-}
-.navbar {
-  padding-right: 80px;
+.nav-item:hover{
+  color: #410CB3;
+  font-weight: 700;
+  font-size: 27px;
 
 }
-.material-symbols-outlined:hover div {
-  display: block;
-}
 
-.dropdown-menu a {
-  display: block;
-  color: #f9f9f9;
-  padding: 12px 16px;
-  text-decoration: none;
-}
-.navbar ul {
-  list-style: none;
-  margin-left: 100px;
-  padding: 0;
-  display: flex;
-}
+/*.top-bar a{*/
+/*  color: inherit;*/
+/*  text-decoration: none;*/
+/*  transition: .4s;*/
+/*  font-size: 24px;*/
+/*  font-weight: 500;*/
+/*  font-family: cursive ,Comic Sans MS;*/
 
-.navbar ul li {
-  margin-right: 20px;
-}
+/*}*/
+/*.top-bar {*/
+/*  background-color: #E519AC;*/
+/*  justify-content: space-between;*/
+/*  padding-right:  40px;*/
+/*  padding-left:  20px;*/
+/*  display: flex;*/
+/*  align-items: center;*/
 
-.navbar ul li a {
-  text-decoration: none;
-  color: #f9f9f9
-}
+/*}*/
+/*.top-bar a:hover{*/
+/*  color: #410CB3;*/
 
-.material-symbols-outlined{
-  background-color: #1E1E1E;
-  color: #f9f9f9;
-}
+/*}*/
+/*.top-bar img {*/
+/*  border-radius: 50%;*/
+/*  width: 90px;*/
+/*  height: 90px;*/
+/*}*/
+/*.navbar {*/
+/*  padding-right: 80px;*/
+
+/*}*/
+/*.navbar a{*/
+/*  padding: 20px;*/
+/*  !*font-family: 'Playfair Display', serif;*!*/
+/*}*/
 
 
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  background-color: #1E1E1E;
-  min-width: 160px;
-  /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.6);*/
-  z-index: 1;
-}
-.dropdown-menu a {
-  color: #f9f9f9;
-}
+
+/*.dropdown-menu a {*/
+/*  display: block;*/
+/*  color: #f9f9f9;*/
+/*  padding: 12px 16px;*/
+/*  text-decoration: none;*/
+/*}*/
+/*.navbar ul {*/
+/*  list-style: none;*/
+/*  margin-left: 100px;*/
+/*  display: flex;*/
+/*}*/
+
+/*.navbar ul li {*/
+/*  margin-right: 20px;*/
+/*}*/
+
+/*.navbar ul li a {*/
+/*  text-decoration: none;*/
+/*  color: #f9f9f9*/
+/*}*/
+
+/*.material-symbols-outlined:hover div {*/
+/*  display: block;*/
+
+/*}*/
+/*.material-symbols-outlined{*/
+/*  background-color: #E519AC;*/
+/*  color: #f9f9f9;*/
+/*}*/
+/*.material-symbols-outlined:hover{*/
+/*  background-color: #410CB3;;*/
+/*  color: #f9f9f9;*/
+/*}*/
+
+/*.dropdown-menu {*/
+/*  display: none;*/
+/*  position: absolute;*/
+/*  background-color: #1E1E1E;*/
+/*  min-width: 160px;*/
+
+/*  !*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.6);*!*/
+/*  z-index: 1;*/
+/*}*/
+/*.dropdown-menu a {*/
+/*  color: #f9f9f9;*/
+/*}*/
 
 
 
