--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Playfair+Display&display=swap');
+
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+::selection {
+  color: red;
+
 }
 body{
   background-color: #1E1E1E;
@@ -62,6 +66,7 @@ button{
 .btn-primary:hover{
    background-color: #E519AC;
    color: black;
+
 }
 
 
@@ -74,6 +79,12 @@ button{
 #header-section {
   padding: 15px 0;
   background-color: #E519AC;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  border: 7px solid black;
+
 }
 .header h1{
   padding: 0 48px;
@@ -100,6 +111,7 @@ button{
 
 .navbar {
   flex-grow: 1;
+
 }
 
 .nav-main {
@@ -126,6 +138,7 @@ button{
 
 #banner-section{
   background-color: #410CB3;
+  padding-top: 110px;
 
 }
 .banner{
@@ -169,8 +182,8 @@ button{
   gap:50px
 }
 .news-list-item {
-  width: 30%; /* Ширина кожного елементу новини */
-  border: 2px solid #9747FF; /* Приклад рамки, можна замінити на свої стилі */
+  width: 30%;
+  border: 2px solid #9747FF;
   padding: 20px;
   margin-bottom: 20px;
   display: flex;
@@ -185,7 +198,7 @@ button{
 
 }
 .news-list-item:nth-child(odd) {
-  border: 2px solid #0D99FF; /* Приклад рамки, можна замінити на свої стилі */
+  border: 2px solid #0D99FF;
 }
 .news-list-item img {
   margin-bottom: 10px;
@@ -206,7 +219,100 @@ button{
 
 
 
+
+#advertising{
+  padding-top: 30px;
+}
+
+.main-list{
+  display: flex;
+  justify-content: space-between;
+  gap:50px
+}
+.main-list-item {
+  width: 30%;
+  border: 2px solid #0D99FF;
+  padding: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  transition: 0.4s;
+  position: relative;
+  overflow: hidden;
+}
+.main-list-item{
+  background-color: #4428F0EB;
+}
+
+.main-list-item:nth-child(odd){
+  background-color: #E519AC;
+
+}
+.main-list-item:nth-child(odd) {
+  border: 2px solid #9747FF;
+}
+
+
+.main-list-item img {
+  /*margin-bottom: 10px;*/
+  width: 100%;
+  display: block;
+}
+
+.list-item-button {
+  position: absolute;
+  left: 50%;
+  top: 80%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+.btn-buy{
+   background-color: black;
+    color: white;
+
+}
+.btn-buy:hover{
+   background-color: black;
+   color: #E519AC;
+}
+
+
+
+
+.footer-copywrite{
+  font-family: Circe, sans-serif;
+  font-size: 19px;
+  display: flex;
+  justify-content: center;
+  padding:60px;
+  gap: 20px;
+}
+/*#footer-section {*/
+/* padding: 15px 0;*/
+/*  background-color: #4428F0EB;*/
+/*}*/
+
+/*.footer {*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*  align-items: center;*/
+/*}*/
+
+/*.footer a:hover {*/
+/*  color: #E519AC;*/
+/*  font-weight: 700;*/
+/*}*/
+/*.navbar {*/
+/*  flex-grow: 1;*/
+/*}*/
+/*.nav-item:hover {*/
+/*  color: #410CB3;*/
+/*  font-weight: 700;*/
+/*  font-size: 27px;*/
+
+/*
 /*TABLE*/
+
 
 
 table {
