--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 }
 ::selection {
   color: red;
+  background-color: white;
 
 }
 body{
@@ -48,6 +49,7 @@ button{
   max-width: 90%;
   margin: 0 auto;
   padding: 0 75px ;
+  padding-top: 150px;
 }
 .conteiner-header{
   padding: 0 10px;
@@ -138,8 +140,6 @@ button{
 
 #banner-section{
   background-color: #410CB3;
-  padding-top: 110px;
-
 }
 .banner{
   display: flex;
@@ -352,6 +352,7 @@ th, td {
   justify-content: center;
   padding:60px;
   gap: 20px;
+  color: #E519AC;
 }
 
 
@@ -365,9 +366,14 @@ th, td {
 
 #about-us{
   font: 500 24px/30px Georgia, serif;
-  padding-top: 110px;
   transition: 0.8s;
 
+}
+.conteiner-about-us h1{
+  display: flex;
+  justify-content: center;
+
+  color: #E519AC;
 }
 .about-us-photo{
   height: 300px;
@@ -375,30 +381,12 @@ th, td {
 }
 .about-text{
   padding: 30px;
-
 }
 .about-list-item h3{
   display: flex;
   justify-content: center;
 }
-.about-list-item{
-  border: 4px solid #0D99FF;
-  padding: 20px;
-  margin: 20px;
-  /*width: 300px;*/
-  /*height: 300px;*/
-}
-.about-list-item:hover{
-  background-color: #E519AC;
-}
-.about-list-item:nth-child(odd){
-  border: 4px solid #410CB3;
-  padding: 20px;
-  margin: 20px;
-}
-.about-list-item:nth-child(odd):hover{
-  background-color: #0D99FF;
-}
+
 .about-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -424,7 +412,17 @@ th, td {
 .about-list-item:nth-child(odd) {
   border: 4px solid #410cb3;
 }
-
+.about-list-item:hover{
+  background-color: #E519AC;
+}
+.about-list-item:nth-child(odd){
+  border: 4px solid #410CB3;
+  padding: 20px;
+  margin: 20px;
+}
+.about-list-item:nth-child(odd):hover{
+  background-color: #0D99FF;
+}
 .text-company-idea p,
 .text-company-production p,
 .text-company-story p,
@@ -446,129 +444,167 @@ th, td {
 .text-problem-solution li:hover .text-call p {
   display: block;
 }
-.about-list-item {
-  /*flex-basis: calc(33.33% - 40px); !* 40px - margin *!*/
-  border: 4px solid #0D99FF;
-  /*padding: 20px;*/
-  /*margin: 20px;*/
+
+
+
+/**/
+/**/
+/*CATALOG*/
+/**/
+/**/
+
+#catalog{
+  max-width: 95%;
+  padding-top: 110px;
+  font: 500 24px/30px Georgia, serif;
   transition: 0.8s;
 }
+#catalog h1{
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  color: #E519AC;
+}
+.catalog-list{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 
+}
+.catalog-list-item img{
+  width: 100%;
+  background-color: white;
+}
+.catalog-list-text {
+  padding-top: 20px;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  padding-left: 10%;
+  color: white;
+}
+.catalog-list-item{
+  background-color: #410CB3;
+  margin: 30px;
+  width: 15%;
+  padding-bottom:  30px;
+}
+.catalog-list-item:nth-child(odd){
+  background-color: rgba(13, 82, 255, 0.62);
 
+}
 
-/*.top-bar a{*/
-/*  color: inherit;*/
-/*  text-decoration: none;*/
-/*  transition: .4s;*/
-/*  font-size: 24px;*/
-/*  font-weight: 500;*/
-/*  font-family: cursive ,Comic Sans MS;*/
-
+/*.about-list {*/
+/*  display: grid;*/
+/*  grid-template-columns: repeat(3, 1fr);*/
+/*  gap: 20px;*/
+/*  list-style-type: none;*/
+/*  padding: 0;*/
 /*}*/
-/*.top-bar {*/
-/*  background-color: #E519AC;*/
-/*  justify-content: space-between;*/
-/*  padding-right:  40px;*/
-/*  padding-left:  20px;*/
+/*.catalog-list-item {*/
 /*  display: flex;*/
+/*  justify-content: center;*/
 /*  align-items: center;*/
-
-/*}*/
-/*.top-bar a:hover{*/
-/*  color: #410CB3;*/
-
-/*}*/
-/*.top-bar img {*/
-/*  border-radius: 50%;*/
-/*  width: 90px;*/
-/*  height: 90px;*/
-/*}*/
-/*.navbar {*/
-/*  padding-right: 80px;*/
-
-/*}*/
-/*.navbar a{*/
+/*  border: 4px solid #0D99FF;*/
 /*  padding: 20px;*/
-/*  !*font-family: 'Playfair Display', serif;*!*/
-/*}*/
-
-
-
-/*.dropdown-menu a {*/
-/*  display: block;*/
-/*  color: #f9f9f9;*/
-/*  padding: 12px 16px;*/
-/*  text-decoration: none;*/
-/*}*/
-/*.navbar ul {*/
-/*  list-style: none;*/
-/*  margin-left: 100px;*/
-/*  display: flex;*/
-/*}*/
-
-/*.navbar ul li {*/
-/*  margin-right: 20px;*/
-/*}*/
-
-/*.navbar ul li a {*/
-/*  text-decoration: none;*/
-/*  color: #f9f9f9*/
-/*}*/
-
-/*.material-symbols-outlined:hover div {*/
-/*  display: block;*/
-
-/*}*/
-/*.material-symbols-outlined{*/
-/*  background-color: #E519AC;*/
-/*  color: #f9f9f9;*/
-/*}*/
-/*.material-symbols-outlined:hover{*/
-/*  background-color: #410CB3;;*/
-/*  color: #f9f9f9;*/
-/*}*/
-
-/*.dropdown-menu {*/
-/*  display: none;*/
-/*  position: absolute;*/
-/*  background-color: #1E1E1E;*/
-/*  min-width: 160px;*/
-
-/*  !*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.6);*!*/
-/*  z-index: 1;*/
-/*}*/
-/*.dropdown-menu a {*/
-/*  color: #f9f9f9;*/
+/*  margin: 20px;*/
+/*  transition:  0.8s;*/
 /*}*/
 
 
 
 
 
+/**/
+/**/
+/*RESPONCE.html*/
+/**/
+/**/
 
-
-
-
-
-
-
-
-
-
-
-::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
+#responce-section h1{
+  display: flex;
+  justify-content: center;
+  color: #E519AC;
 }
 
-::selection {
-  background: #b3d4fc;
-  text-shadow: none;
+#responce-section {
+  text-align: center;
+  font-size: 20px;
 }
 
-/*
- * A better looking default horizontal rule
- */
+.responce-box {
+  max-width: 90%;
+  margin: auto auto;
+  background-color: #410CB3;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #E519AC;
+}
+
+
+.conteiner-responce {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*padding: 20px;*/
+  /*margin: 30px;*/
+
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #E519AC;
+
+}
+
+/*input[type="email"],*/
+/*input[type="number"],*/
+input,
+textarea,
+select {
+  width: calc(100% - 22px);
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 30px;
+  border: 1px solid #ccc;
+}
+
+button[type="submit"] {
+  padding: 10px 20px;
+  background-color: #0D99FF;
+  color: white;
+  border-radius: 5px;
+  transition: background-color 0.8s ;
+  width: 100%;
+
+}
+
+button[type="submit"]:hover {
+  background-color: #2980b9;
+}
+
+input[type="checkbox"] {
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+.responce-age,.respoce-checkbox, .responce-button,
+.responce-email, .responce-longmassage, .responce-select, .responce-radio, .purchase-info{
+  margin: 20px;
+}
+
+
+
+#cart-section{
+  text-align: center;
+  font-size: 20px;
+  margin: 30px;
+}
+
+
+
+
+
 
 hr {
   display: block;
