--- a/css/main.css
+++ b/css/main.css
@@ -377,7 +377,6 @@ th, td {
 .conteiner-about-us h1{
   display: flex;
   justify-content: center;
-
   color: #E519AC;
 }
 .about-us-photo{
@@ -402,7 +401,7 @@ th, td {
 
 .about-list-item {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
   border: 4px solid #0D99FF;
   padding: 20px;
@@ -483,10 +482,9 @@ th, td {
 .catalog-list-text {
   padding-top: 20px;
   width: 90%;
-  display: flex;
-  justify-content: center;
   padding-left: 10%;
   color: white;
+  text-align: center;
 }
 .catalog-list-item{
   background-color: #410CB3;
@@ -604,6 +602,7 @@ input[type="checkbox"] {
   text-align: center;
   font-size: 20px;
   margin: 30px;
+
 }
 
 
@@ -642,7 +641,7 @@ input[type="checkbox"] {
 .responce-trigger{
   cursor: pointer;
   background-color: #E519AC;
-  width: 23%;
+  display: inline;
   border-radius: 40px;
   padding: 20px 20px ;
 }
